// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`world-mutations with world and logged in create pin 1`] = `
{
  "data": {
    "createPin": {
      "_id": Any<String>,
      "canWrite": true,
      "map": {
        "_id": Any<String>,
        "name": "Earth",
      },
      "page": {
        "_id": Any<String>,
        "name": "Earth",
        "type": "Place",
      },
      "x": 0,
      "y": 0,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in create world 1`] = `
{
  "data": {
    "createWorld": {
      "_id": Any<String>,
      "wikiPage": {
        "_id": Any<String>,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in delete pin 1`] = `
{
  "data": {
    "deletePin": {
      "_id": Any<String>,
      "canWrite": true,
      "map": {
        "_id": Any<String>,
        "name": "Earth",
      },
      "page": {
        "_id": Any<String>,
        "name": "other page",
        "type": "Article",
      },
      "x": 0,
      "y": 0,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in not logged in create pin no permission 1`] = `
{
  "data": null,
  "errors": ArrayContaining [
    Any<Object>,
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in not logged in create world no permissions 1`] = `
{
  "data": null,
  "errors": ArrayContaining [
    Any<Object>,
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in not logged in delete pin no permission 1`] = `
{
  "data": null,
  "errors": ArrayContaining [
    Any<Object>,
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in not logged in rename world no permission 1`] = `
{
  "data": null,
  "errors": ArrayContaining [
    Any<Object>,
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in not logged in update pin no permission 1`] = `
{
  "data": null,
  "errors": ArrayContaining [
    Any<Object>,
  ],
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in rename world 1`] = `
{
  "data": {
    "renameWorld": {
      "_id": Any<String>,
      "name": "Azeroth",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`world-mutations with world and logged in update pin 1`] = `
{
  "data": {
    "updatePin": {
      "_id": Any<String>,
      "canWrite": true,
      "map": {
        "_id": Any<String>,
        "name": "Earth",
      },
      "page": {
        "_id": Any<String>,
        "name": "other page",
        "type": "Article",
      },
      "x": 0,
      "y": 0,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
